0.1.0
 - ref: migrate preferences to QSettings
0.0.9
 - enh: send DCOR-Aid user-agent string
0.0.8
 - fix: force restart of DCOR-Aid upon wizard end
 - fix: improve handling of cache and config directories
0.0.7
 - fix: allow resuming when upload fails (#3)
 - fix: start even if DCOR is down
 - fix: do not display mean upload rate during upload
 - fix: require restart when server is changed
 - enh: ask user to create a Circle when the user is not member of any 
 - enh: add basic wizard functionalities
 - enh: resource upload supports supplementary resource schemas
 - enh: stick to package_revise when finalizing dataset
 - enh: verify resource uploads via SHA256 sum (#7)
 - enh: fetch license list directly from server
 - enh: functionalize action buttons in upload
 - enh: increase verbosity of CKANAPI
 - enh: implement resource compression (#6)
 - ref: move connectivity check and user database update to separate
   background threads
 - ref: store traceback of failed upload in job info
0.0.6
 - enh: allow to create the circle if it does not exist during dataset
   creation
 - fix: set "state" to "active" in dictionary returned by `create_dataset`
 - fix: catch error when user uses `CKANAPI.get` when he should use
   `CKANAPI.post`
0.0.5
 - basic upload functional
0.0.4
 - initial ci release test