@@ -465,7 +465,7 @@
   </action>
   <action name="actionPreferences">
    <property name="text">
-    <string>Preferences</string>
+    <string>Preferences...</string>
    </property>
   </action>
   <action name="actionAbout">
@@ -475,7 +475,7 @@
   </action>
   <action name="actionSetupWizard">
    <property name="text">
-    <string>Setup wizard</string>
+    <string>Setup wizard...</string>
    </property>
   </action>
  </widget>
